--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "zikula/pages-module",
-    "description": "Change me description Module",
+    "description": "Pages is a Static Page creation module for the Zikula Application Framework.",
     "type": "zikula-module",
     "license": "LGPL-3.0+",
     "authors": [
