--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "zikula/pages-module",
+  "version": "3.0.1",
   "description": "Pages is a Static Page creation module for the Zikula Application Framework.",
   "type": "zikula-module",
   "license": "LGPL-3.0+",
@@ -15,9 +16,27 @@
   "require": {
     "php": ">5.3.3"
   },
+  "suggest": {
+    "Scribite:>=5.0.0": "To allow WYSIWYG page editing."
+  },
   "extra": {
     "zikula": {
-      "class": "Zikula\\PagesModule\\ZikulaPagesModule"
+      "core-compatibility": ">=1.4.2",
+      "class": "Zikula\\PagesModule\\ZikulaPagesModule",
+      "displayname": "Pages",
+      "url": "pages",
+      "oldnames": ["Pages"],
+      "capabilities": {
+        "hook_subscriber": {"enabled": true},
+        "searchable": {"class": "Zikula\\PagesModule\\Helper\\SearchHelper"},
+        "categorizable": ["Zikula\\PagesModule\\Entity\\PageEntity"],
+        "user": {"route": "zikulapagesmodule_user_index"},
+        "admin": {"route": "zikulapagesmodule_admin_index"}
+      },
+      "securityschema": {
+        "ZikulaPagesModule::": "Page name::Page ID",
+        "ZikulaPagesModule:category:": "Category ID::"
+      }
     }
   }
 }
