move HookHelper to HookContainer (closes #47) upgrade to AbstractExtensionInstaller

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
       "url": "pages",
       "oldnames": ["Pages"],
       "capabilities": {
-        "hook_subscriber": {"enabled": true},
+        "hook_subscriber": {"class": "Zikula\\PagesModule\\Container\\HookContainer"},
         "searchable": {"class": "Zikula\\PagesModule\\Helper\\SearchHelper"},
         "categorizable": ["Zikula\\PagesModule\\Entity\\PageEntity"],
         "user": {"route": "zikulapagesmodule_user_index"},
