update Blocks to Core-2.0 spec. refactor various other static Api calls to new Service calls

--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,9 @@
       },
       "securityschema": {
         "ZikulaPagesModule::": "Page name::Page ID",
-        "ZikulaPagesModule:category:": "Category ID::"
+        "ZikulaPagesModule:category:": "Category ID::",
+        "ZikulaPagesModule:pageslistblock:": "Block title::",
+        "ZikulaPagesModule:pageblock:": "Block title::"
       }
     }
   }
