--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "psr-4": {"Zikula\\PagesModule\\": ""}
   },
   "require": {
-    "php": ">5.5.9"
+    "php": ">=5.5.9"
   },
   "suggest": {
     "Scribite:>=5.0.0": "To allow WYSIWYG page editing."
