--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
   "authors": [
     {
       "name": "Zikula Team",
-      "homepage": "http://www.zikula.org/"
+      "homepage": "https://ziku.la/"
     }
   ],
   "autoload": {
