--- a/.github/workflows/build-extension.yml
+++ b/.github/workflows/build-extension.yml
@@ -6,6 +6,8 @@ jobs:
     steps:
     - name: Checkout sources
       uses: actions/checkout@v2
+      with:
+        ref: master
 
     - name: Move custom files
       - run: |
