--- a/.github/workflows/build-extension.yml
+++ b/.github/workflows/build-extension.yml
@@ -32,4 +32,4 @@ jobs:
         uses: actions/upload-artifact@master
         with:
           name: ZikulaPagesModule_v4.0.0
-          path: './ZikulaPagesModule_v4.0.0'
+          path: './PagesModule'
