--- a/.github/workflows/build-extension.yml
+++ b/.github/workflows/build-extension.yml
@@ -11,8 +11,8 @@ jobs:
 
       - name: Move custom files
         run: |
-          cp -tr public/overrides/zikulapagesmodule/ src/extensions/Zikula/PagesModule/Resources/public/
-          cp -tr templates/bundles/ZikulaPagesModule/ src/extensions/Zikula/PagesModule/Resources/views/
+          cp -t -r public/overrides/zikulapagesmodule/ src/extensions/Zikula/PagesModule/Resources/public/
+          cp -t -r templates/bundles/ZikulaPagesModule/ src/extensions/Zikula/PagesModule/Resources/views/
           mv src/extensions/Zikula/PagesModule/README.md src/extensions/Zikula/PagesModule/_README.md
           mv README.markdown src/extensions/Zikula/PagesModule/README.md
 
