--- a/.github/workflows/test-module.yml
+++ b/.github/workflows/test-module.yml
@@ -28,5 +28,5 @@ jobs:
     - name: Upload release folder as artifact
       uses: actions/upload-artifact@master
       with:
-        name: ZikulaPagesModule_v4.0.0
-        path: './ZikulaPagesModule_v4.0.0'
+        name: ZikulaPagesModule
+        path: './ZikulaPagesModule'
