--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -22,8 +22,8 @@ jobs:
       uses: peter-evans/create-pull-request@v3
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        commit-message: '⬆️ update generated code'
-        title: '⬆️ update generated code'
+        commit-message: '⬆️ update dependencies'
+        title: '⬆️ update dependencies'
         body: This is an auto-generated PR with dependency updates.
         labels: dep-updates
         branch: dep-updates
